--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,20 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    allprojects {
+        repositories {
+            google()
+
+            // If you're using a version of Gradle lower than 4.1, you must instead use:
+            // maven {
+            //     url 'https://maven.google.com'
+            // }
+        }
+    }
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -30,4 +44,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5]'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+
 }
